--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Header</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <script src="https://kit.fontawesome.com/2902143893.js" crossorigin="anonymous"></script>
 </head>
 
@@ -48,9 +49,9 @@
                 <a href="#" class="fab fa-twitter-square">Twitter</a>
             </div>
             <div class="end four">
-                <input type="text">
+                <input type="text" placeholder="Email">
                 <br>
-                <textarea></textarea>
+                <textarea placeholder="Message"></textarea>
                 <br>
                 <input type="submit" value="SEND">
             </div>
