--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header">
         <div class="header-right">
-            <span href="#" class="login">Log In</span>
+            <a href="#" class="login">Log In</a>
             <a href="#" class="fas fa-angle-down">HOME</a>
             <a href="#" class="fas fa-angle-down">CONTACT</a>
         </div>
@@ -56,6 +56,10 @@
                 <input type="submit" value="SEND">
             </div>
         </div>
+    </div>
+    <div class="last">
+        <p>&copy;2017 | build by HTML&CSS </p>
+    </div>
 </body>
 
 </html>
