--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="11seo.png">
             <div class="footer-top-right">
                 <a class="fas fa-map-marker-alt">Location<br>Jl.SETIA BUDI NO.10<br>PEKANBARU,RIAU</a>
-                <a class="fas fa-address-book">082110101010<br>alibabuy@buy.com</a>
+                <a class="fas fa-address-book">082110101010<br>SEO@BUY.COM</a>
             </div>
         </div>
         <div class="footer-bottom">
