adding workflow in main

--- a/index.html
+++ b/index.html
@@ -20,7 +20,31 @@
             <img src="11seo.png" href="#">
         </div>
     </div>
-    <div class="main"></div>
+    <div class="main">
+        <div class="container">
+            <div class="weprovide"></div>
+            <div class="Workflow">
+                <h2 class="section-title">Workflow</h2>
+                <h3 class="section-tagline">Our Working Process</h3>
+                <div class="workflow-item">
+                    <img class="img1" src="planning.png">
+                    <p class="p1">Planning</p>
+                </div>
+                <div class="workflow-item">
+                    <img class="img2" src="research.png">
+                    <p>Research</p>
+                </div>
+                <div class="workflow-item">
+                    <img class="img3" src="optimizing.png">
+                    <p>Optimizing</p>
+                </div>
+                <div class="workflow-item">
+                    <img class="img4" src="result.png">
+                    <p>Result</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="footer">
         <div class="footer-top">
             <img src="11seo.png">
