Add banner and our team,

--- a/index.html
+++ b/index.html
@@ -2,88 +2,185 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>Header</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
-    <script src="https://kit.fontawesome.com/2902143893.js" crossorigin="anonymous"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Progate</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="responsive.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
+  <script src="https://kit.fontawesome.com/2902143893.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
-    <div class="header">
-        <div class="header-right">
-            <a href="#" class="login">Log In</a>
-            <a href="#" class="fas fa-angle-down">HOME</a>
-            <a href="#" class="fas fa-angle-down">CONTACT</a>
-        </div>
-        <div class="header-left">
-            <img src="11seo.png" href="#">
-        </div>
+  <header>
+    <div class="container">
+      <div class="header-left">
+        <img class="logo" src="11seo.png">
+      </div>
+      <span class="fa fa-bars menu-icon"></span>
+      <div class="header-right">
+        <a href="#">Home</a>
+        <a href="#">Services</a>
+        <a href="#">Blog</a>
+        <a href="#">Careers</a>
+        <a href="#">About</a>
+      </div>
     </div>
-    <div class="main">
-        <div class="container">
-            <div class="weprovide"></div>
-            <div class="Workflow">
-                <h2 class="section-title">Workflow</h2>
-                <h3 class="section-tagline">Our Working Process</h3>
-                <div class="workflow-item">
-                    <img class="img1" src="planning.png">
-                    <p class="p1">Planning</p>
-                </div>
-                <div class="workflow-item">
-                    <img class="img2" src="research.png">
-                    <p>Research</p>
-                </div>
-                <div class="workflow-item">
-                    <img class="img3" src="optimizing.png">
-                    <p>Optimizing</p>
-                </div>
-                <div class="workflow-item">
-                    <img class="img4" src="result.png">
-                    <p>Result</p>
-                </div>
-            </div>
+  </header>
+
+  <div class="top-wrapper">
+    <div class="container">
+      <div class="column-wrapper">
+        <div class="left-wrapper">
+          <h2>We Provide</h2>
+          <h1>Best SEO Service</h1>
+          <p>We provide service to maximize the value of relevat web pages in order to rank and visitor of the Google
+            Search Engine</p>
+          <p>We provide service to maximize the value of relevat web pages in order to rank and visitor of the Google
+            Search Engine</p>
+          <p>We provide service to maximize the value of relevat web pages in order to rank and visitor of the Google
+            Search Engine</p>
         </div>
-    </div>
-    <div class="footer">
-        <div class="footer-top">
-            <img src="11seo.png">
-            <div class="footer-top-right">
-                <a class="fas fa-map-marker-alt">Location<br>Jl.SETIA BUDI NO.10<br>PEKANBARU,RIAU</a>
-                <a class="fas fa-address-book">082110101010<br>SEO@BUY.COM</a>
-            </div>
+        <div class="right-wrapper">
+          <img src="wepro.png">
         </div>
-        <div class="footer-bottom">
-            <div class="end one">
-                <p>OUR SERVICES</p>
-                <a href="#">Testimony</a>
-                <a href="#">Blog</a>
-                <a href="#">Help</a>
-            </div>
-            <div class="end two">
-                <p>SUPPORT</p>
-                <a href="#">About Us</a>
-                <a href="#">Terms</a>
-                <a href="#">Privacy Policy</a>
-            </div>
-            <div class="end three">
-                <p>CONNECT WITH US</p>
-                <a href="#" class="fab fa-instagram-square">Instagram</a>
-                <a href="#" class="fab fa-facebook-square">Facebook</a>
-                <a href="#" class="fab fa-twitter-square">Twitter</a>
-            </div>
-            <div class="end four">
-                <input type="text" placeholder="Email">
-                <br>
-                <textarea placeholder="Message"></textarea>
-                <br>
-                <input type="submit" value="SEND">
-            </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="workflow-wrapper">
+    <div class="container">
+      <div class="workflow-heading">
+        <h2>Workflow</h2>
+        <h1>Our Working Process</h1>
+      </div>
+      <div class="workflow">
+
+        <div class="workflow-item">
+          <div class="workflow-icon">
+            <img src="planning.png">
+            <p></p>
+          </div>
+          <p class="workflow-contents">Planning</p>
         </div>
+        <div class="workflow-item">
+          <div class="workflow-icon">
+            <img src="research.png">
+            <p></p>
+          </div>
+          <p class="workflow-contents">Research</p>
+        </div>
+        <div class="workflow-item">
+          <div class="workflow-icon">
+            <img src="optimizing.png">
+            <p></p>
+          </div>
+          <p class="workflow-contents">Optimizing</p>
+        </div>
+        <div class="workflow-item">
+          <div class="workflow-icon">
+            <img src="result.png">
+            <p></p>
+          </div>
+          <p class="workflow-contents">Result</p>
+        </div>
+        <div class="clear"></div>
+      </div>
     </div>
-    <div class="last">
-        <p>&copy;2017 | build by HTML&CSS </p>
+  </div>
+
+  <div class="lesson-wrapper">
+    <div class="container">
+      <div class="heading">
+        <h2>Interested!</h2>
+        <h1>Meet Our Team</h1>
+      </div>
+      <div class="lessons">
+        <div class="lesson-team">
+          <div class="team-icon">
+            <img src="diandra.jpg">
+            <p></p>
+          </div>
+          <p class="text-contents">Diandra Setiabudi</p>
+        </div>
+        <div class="lesson-team">
+          <div class="team-icon">
+            <img src="ibnu.png">
+            <p></p>
+          </div>
+          <p class="text-contents">Ibnu Sulistyo</p>
+        </div>
+        <div class="lesson-team">
+          <div class="team-icon">
+            <img src="jonathan.png">
+            <p></p>
+          </div>
+          <p class="text-contents">Jonathan Santoso</p>
+        </div>
+        <div class="lesson-team">
+          <div class="team-icon">
+            <img src="frendi.png">
+            <p></p>
+          </div>
+          <p class="text-contents">Fredi Andreas</p>
+        </div>
+        <div class="lesson-team">
+          <div class="team-icon">
+            <img src="hakim.jpg">
+            <p></p>
+          </div>
+          <p class="text-contents">Muhammad Hakim Setyobudi</p>
+        </div>
+        <div class="clear"></div>
+      </div>
     </div>
+  </div>
+  <div class="footer">
+    <div class="container">
+      <div class="footer-top">
+        <div class="footer-left">
+          <img src="11seo.png">
+        </div>
+        <div class="footer-right">
+          <a class="fas fa-map-marker-alt">Location<br>Jl.SETIA BUDI NO.10<br>PEKANBARU,RIAU</a>
+          <a class="fas fa-address-book">082110101010<br>SEO@BUY.COM</a>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <div class="end">
+          <p>OUR SERVICES</p>
+          <a href="#">Testimony</a>
+          <a href="#">Blog</a>
+          <a href="#">Help</a>
+        </div>
+        <div class="end">
+          <p>SUPPORT</p>
+          <a href="#">About Us</a>
+          <a href="#">Terms</a>
+          <a href="#">Privacy Policy</a>
+        </div>
+        <div class="end">
+          <p>CONNECT WITH US</p>
+          <a href="#" class="fab fa-instagram-square">Instagram</a>
+          <a href="#" class="fab fa-facebook-square">Facebook</a>
+          <a href="#" class="fab fa-twitter-square">Twitter</a>
+        </div>
+        <div class="end four">
+          <input type="text" placeholder="Email">
+          <br>
+          <textarea placeholder="Message"></textarea>
+          <br>
+          <input type="submit" value="SEND">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="last">
+    <p>&copy;2020 | build by GRUOP 11 </p>
+  </div>
 </body>
 
 </html>
