--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="header-left">
         <img class="logo" src="11seo.png">
       </div>
-      <span class="fa fa-bars menu-icon"></span>
+      <a href="#" class="menu-icon"><span class="fa fa-bars"></span></a>
       <div class="header-right">
         <a href="#">Home</a>
         <a href="#">Services</a>
