--- a/index.html
+++ b/index.html
@@ -91,6 +91,27 @@
     </div>
   </div>
 
+  <div class="vision">
+    <div class="container">
+      <div class="column-wrapper">
+        <div class="left-wrapper">
+          <h1>Our Vision</h1>
+          <h2>Pancasila</h2>
+          <ul>
+		  <li>Ketuhanan Yang Maha Esa</li>
+		  <li>Kemanusiaan yang adil dan beradab</li>
+		  <li>Persatuan Indonesia</li>
+		  <li>Kerakyatan yang dipimpin oleh hikmat kebijaksanaan dalam permusyawaratan perwakilan</li>
+		  <li>Keadilan Sosial bagi seluruh rakyat Indonesia</li>
+		  </ul>
+        </div>
+        <div class="right-wrapper">
+          <img src="wepro.png">
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="lesson-wrapper">
     <div class="container">
       <div class="heading">
@@ -137,6 +158,22 @@
       </div>
     </div>
   </div>
+  
+    <div class="hire-wrapper">
+    <div class="container">
+      <div class="column-wrapper">
+        <div class="left-wrapper">
+			<img src="wepro.png">
+        </div>
+        <div class="right-wrapper">
+          <h1>We're Hiring</h1>
+          <h2>Interested to working with our teams?</h2>
+          <span class="btn resume">Drop your resume here</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  
   <div class="footer">
     <div class="container">
       <div class="footer-top">
