--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </div>
   </div>
   
-    <div class="hire-wrapper">
+    <div class="hire">
     <div class="container">
       <div class="column-wrapper">
         <div class="left-wrapper">
