--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		  </ul>
         </div>
         <div class="right-wrapper">
-          <img src="wepro.png">
+          <img src="vision.png">
         </div>
       </div>
     </div>
@@ -201,9 +201,9 @@
         </div>
         <div class="end">
           <p>CONNECT WITH US</p>
-          <a href="#" class="fab fa-instagram-square">Instagram</a>
-          <a href="#" class="fab fa-facebook-square">Facebook</a>
-          <a href="#" class="fab fa-twitter-square">Twitter</a>
+          <a href="#" class="fab fa-instagram-square"> Instagram</a>
+          <a href="#" class="fab fa-facebook-square"> Facebook</a>
+          <a href="#" class="fab fa-twitter-square"> Twitter</a>
         </div>
         <div class="end four">
           <input type="text" placeholder="Email">
