--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             Search Engine</p>
         </div>
         <div class="right-wrapper">
-          <img src="wepro.png">
+          <img src="provide seo service.png">
         </div>
       </div>
     </div>
@@ -163,7 +163,7 @@
     <div class="container">
       <div class="column-wrapper">
         <div class="left-wrapper">
-			<img src="wepro.png">
+			<img src="hire.jpg">
         </div>
         <div class="right-wrapper">
           <h1>We're Hiring</h1>
