--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		  </ul>
         </div>
         <div class="right-wrapper">
-          <img src="vision.png">
+          <img src="vision.jpg">
         </div>
       </div>
     </div>
@@ -163,7 +163,7 @@
     <div class="container">
       <div class="column-wrapper">
         <div class="left-wrapper">
-			<img src="hire.jpg">
+			<img src="hire.png">
         </div>
         <div class="right-wrapper">
           <h1>We're Hiring</h1>
