--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             Search Engine</p>
         </div>
         <div class="right-wrapper">
-          <img src="provide seo service.png">
+          <img src="wepro.png">
         </div>
       </div>
     </div>
