--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
           <h1>Best SEO Service</h1>
           <p>We provide service to maximize the value of relevat web pages in order to rank and visitor of the Google
             Search Engine</p>
-          <p>We provide service to maximize the value of relevat web pages in order to rank and visitor of the Google
-            Search Engine</p>
-          <p>We provide service to maximize the value of relevat web pages in order to rank and visitor of the Google
-            Search Engine</p>
+          <p>You can get an edge on the competition with a strong, integrated strategy that combines content marketing, research, technical SEO, social media, paid strategies, and other elements of online marketing.</p>
         </div>
         <div class="right-wrapper">
           <img src="wepro.png">
