--- a/index.html
+++ b/index.html
@@ -126,30 +126,30 @@
         <div class="lesson-team">
           <div class="team-icon">
             <img src="ibnu.png">
-            <p></p>
+            <p class="text-contents">Ibnu Sulistyo</p>
           </div>
-          <p class="text-contents">Ibnu Sulistyo</p>
+          
         </div>
         <div class="lesson-team">
           <div class="team-icon">
             <img src="jonathan.png">
-            <p></p>
+            <p class="text-contents">Jonathan Santoso</p>
           </div>
           <p class="text-contents">Jonathan Santoso</p>
         </div>
         <div class="lesson-team">
           <div class="team-icon">
             <img src="frendi.png">
-            <p></p>
+            <p class="text-contents">Fredi Andreas</p>
           </div>
-          <p class="text-contents">Fredi Andreas</p>
+ 
         </div>
         <div class="lesson-team">
           <div class="team-icon">
             <img src="hakim.jpg">
-            <p></p>
+            <p class="text-contents">Muhammad Hakim Setyobudi</p>
           </div>
-          <p class="text-contents">Muhammad Hakim Setyobudi</p>
+          
         </div>
         <div class="clear"></div>
       </div>
