--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
           <h1>Our Vision</h1>
           <h2>Pancasila</h2>
           <ul>
-		  <li>Ketuhanan Yang Maha Esa</li>
-		  <li>Kemanusiaan yang adil dan beradab</li>
-		  <li>Persatuan Indonesia</li>
-		  <li>Kerakyatan yang dipimpin oleh hikmat kebijaksanaan dalam permusyawaratan perwakilan</li>
-		  <li>Keadilan Sosial bagi seluruh rakyat Indonesia</li>
-		  </ul>
+            <li>Ketuhanan Yang Maha Esa</li>
+            <li>Kemanusiaan yang adil dan beradab</li>
+            <li>Persatuan Indonesia</li>
+            <li>Kerakyatan yang dipimpin oleh hikmat kebijaksanaan dalam permusyawaratan perwakilan</li>
+            <li>Keadilan Sosial bagi seluruh rakyat Indonesia</li>
+          </ul>
         </div>
         <div class="right-wrapper">
           <img src="vision.jpg">
@@ -158,12 +158,12 @@
       </div>
     </div>
   </div>
-  
-    <div class="hire">
+
+  <div class="hire">
     <div class="container">
       <div class="column-wrapper">
         <div class="left-wrapper">
-			<img src="hire.png">
+          <img src="hire.png">
         </div>
         <div class="right-wrapper">
           <h1>We're Hiring</h1>
@@ -173,7 +173,14 @@
       </div>
     </div>
   </div>
-  
+  <div class="contoh">
+    <div class="animat">
+      <p>We're Hiring, Join Now! . . . We're Hiring, Join Now! . . . We're Hiring, Join Now! . . . We're
+        Hiring, Join Now! . . . We're Hiring, Join Now! </p>
+    </div>
+  </div>
+  </div>
+
   <div class="footer">
     <div class="container">
       <div class="footer-top">
