--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
           <h1>Best SEO Service</h1>
           <p>We provide service to maximize the value of relevat web pages in order to rank and visitor of the Google
             Search Engine</p>
-          <p>You can get an edge on the competition with a strong, integrated strategy that combines content marketing, research, technical SEO, social media, paid strategies, and other elements of online marketing.</p>
+          <p>You can get an edge on the competition with a strong, integrated strategy that combines content marketing,
+            research, technical SEO, social media, paid strategies, and other elements of online marketing.</p>
         </div>
         <div class="right-wrapper">
           <img src="wepro.png">
@@ -128,7 +129,7 @@
             <img src="ibnu.png">
             <p class="text-contents">Ibnu Sulistyo</p>
           </div>
-          
+
         </div>
         <div class="lesson-team">
           <div class="team-icon">
@@ -142,14 +143,14 @@
             <img src="frendi.png">
             <p class="text-contents">Fredi Andreas</p>
           </div>
- 
+
         </div>
         <div class="lesson-team">
           <div class="team-icon">
             <img src="hakim.jpg">
             <p class="text-contents">Muhammad Hakim Setyobudi</p>
           </div>
-          
+
         </div>
         <div class="clear"></div>
       </div>
