--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
           <h1>Best SEO Service</h1>
           <p>We provide service to maximize the value of relevat web pages in order to rank and visitor of the Google
             Search Engine</p>
-          <p>You can get an edge on the competition with a strong, integrated strategy that combines content marketing, research, technical SEO, social media, paid strategies, and other elements of online marketing.</p>
+          <p>We provide service to maximize the value of relevat web pages in order to rank and visitor of the Google
+            Search Engine</p>
+          <p>We provide service to maximize the value of relevat web pages in order to rank and visitor of the Google
+            Search Engine</p>
         </div>
         <div class="right-wrapper">
           <img src="wepro.png">
@@ -126,36 +129,36 @@
         <div class="lesson-team">
           <div class="team-icon">
             <img src="ibnu.png">
-            <p class="text-contents">Ibnu Sulistyo</p>
+            <p></p>
           </div>
-          
+          <p class="text-contents">Ibnu Sulistyo</p>
         </div>
         <div class="lesson-team">
           <div class="team-icon">
             <img src="jonathan.png">
-            <p class="text-contents">Jonathan Santoso</p>
+            <p></p>
           </div>
           <p class="text-contents">Jonathan Santoso</p>
         </div>
         <div class="lesson-team">
           <div class="team-icon">
             <img src="frendi.png">
-            <p class="text-contents">Fredi Andreas</p>
+            <p></p>
           </div>
- 
+          <p class="text-contents">Fredi Andreas</p>
         </div>
         <div class="lesson-team">
           <div class="team-icon">
             <img src="hakim.jpg">
-            <p class="text-contents">Muhammad Hakim Setyobudi</p>
+            <p></p>
           </div>
-          
+          <p class="text-contents">Muhammad Hakim Setyobudi</p>
         </div>
         <div class="clear"></div>
       </div>
     </div>
   </div>
-  
+
     <div class="hire">
     <div class="container">
       <div class="column-wrapper">
@@ -170,7 +173,7 @@
       </div>
     </div>
   </div>
-  
+
   <div class="footer">
     <div class="container">
       <div class="footer-top">
