--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
   </div>
 
-  <div class="lesson-wrapper">
+    <div class="lesson-wrapper">
     <div class="container">
       <div class="heading">
         <h2>Interested!</h2>
@@ -120,41 +120,37 @@
         <div class="lesson-team">
           <div class="team-icon">
             <img src="diandra.jpg">
-            <p></p>
+            <p>Diandra Setiabudi</p>
           </div>
-          <p class="text-contents">Diandra Setiabudi</p>
+          <p class="text-contents"></p>
         </div>
         <div class="lesson-team">
           <div class="team-icon">
             <img src="ibnu.png">
-            <p></p>
+            <p>Ibnu Sulistyo</p>
           </div>
-          <p class="text-contents">Ibnu Sulistyo</p>
-
+          <p class="text-contents"></p>
         </div>
         <div class="lesson-team">
           <div class="team-icon">
             <img src="jonathan.png">
-            <p></p>
+            <p>Jonathan Santoso</p>
           </div>
-          <p class="text-contents">Jonathan Santoso</p>
+          <p class="text-contents"></p>
         </div>
         <div class="lesson-team">
           <div class="team-icon">
             <img src="frendi.png">
-            <p></p>
+            <p>Fredi Andreas</p>
           </div>
-
-          <p class="text-contents">Fredi Andreas</p>
-
+          <p class="text-contents"></p>
         </div>
         <div class="lesson-team">
           <div class="team-icon">
             <img src="hakim.jpg">
-            <p></p>
+            <p>Muhammad Hakim Setyobudi</p>
           </div>
-
-          <p class="text-contents">Muhammad Hakim Setyobudi</p>
+          <p class="text-contents"></p>
         </div>
         <div class="clear"></div>
       </div>
