--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
   </div>
 
-    <div class="lesson-wrapper">
+  <div class="lesson-wrapper">
     <div class="container">
       <div class="heading">
         <h2>Interested!</h2>
@@ -179,6 +179,14 @@
 
   <div class="footer">
     <div class="container">
+      <div class="nightmode">
+        <input type="checkbox" class="checkbox" id="chk" />
+        <label class="label" for="chk">
+          <i class="fas fa-moon"></i>
+          <i class="fas fa-sun"></i>
+          <div class="ball"></div>
+        </label>
+      </div>
       <div class="footer-top">
         <div class="footer-left">
           <img src="11seo.png">
@@ -221,6 +229,7 @@
   <div class="last">
     <p>&copy;2020 | build by GRUOP 11 </p>
   </div>
+  <script src="javascript.js"></script>
 </body>
 
 </html>
